--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -17,10 +17,10 @@
 }
 
 h1{
-    font-size: min(7vw, 4em);
+    font-size: min(7vw, 3em);
 }
 h2{
-    font-size: min(7vw, 3em);
+    font-size: min(7vw, 1.8em);
 }
 h1,h2{
     color: $h-color;
@@ -29,15 +29,15 @@ h1,h2{
 p{
     color: $p-color;
     font-weight: 400;
-    line-height: 3vh; 
-    font-size: clamp(0.9em, 2vw, 1.5em);
+    line-height: 2em; 
+    font-size: clamp(0.9em, 2vw, 1.25em);
 }
 
 .info p{
     letter-spacing: .1em;
     text-transform: uppercase;
     font-weight: 400;
-    font-size: clamp(0.8em, 2vw, 1.5em);
+    font-size: clamp(0.8em, 2vw, 1.0em);
 }
 .accent{
     color: $accent;
