--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -9,31 +9,38 @@
     gap: 5%;
     background-color: $card-color;
     border-radius: 1em;
-    margin: 2em;
+    margin: 0.5em;
     overflow: hidden;
     
     img{
         display: block;
         width: 100%;
+        height: 100%;
+        
         opacity: 50%;
     }
     .filter{
         background-color: $accent;
         
     }
-    .hero-image{
-        
+    .hero-image, .hero-image-desktop{
+        height: 100%;
+        width: 100%;
     }
     .hero-statement{
         height: 100%;
         width: 80%;
         @include flexContent(center, start, column);
         text-align: center;
-        gap: 1em;
         margin-top: 10%;
+        .hero-title{
+            margin-bottom: 5%;
+        }
         .info{            
-            gap: 4em;
             margin: 1.5em 0;
+            & > * {
+                margin: 1em;
+            }
         }
     }
     .hero-image-desktop{
@@ -43,12 +50,13 @@
 @media screen and (min-width: 576px){
     .info{
         width: 100%;
-        @include flexContent(center, space-between, row);
+        @include flexContent(center, space-around, row);
     }
 }
 @media screen and (min-width: 1200px){
     .card{
         flex-wrap: nowrap;
+        
         .hero-statement{
             width: 50%;
             margin-top: unset;
@@ -64,12 +72,13 @@
                 text-align: left;
             }
             & > *{
-                width: 80%;
+                width: 70%;
             }
         }
         .hero-image-desktop{
-            display: block;
+            display:flex;
             width: 50%;
+            
             img{
                 display: block;
                 width: 100%;
@@ -77,6 +86,9 @@
         }
         .hero-image{
             display: none;
+        }
+        .info{
+            @include flexContent(center, space-between, row);
         }
     } 
 }
