--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -17,7 +17,7 @@
         width: 100%;
         height: 100%;
         
-        opacity: 50%;
+        opacity: 0.5;
     }
     .filter{
         background-color: $accent;
@@ -61,9 +61,7 @@
             width: 50%;
             margin-top: unset;
             text-align: left;
-            .hero-title{
-                margin: 5% auto;
-            }
+            
             .hero-description{
                 margin-bottom: 5%;
             }
@@ -76,7 +74,7 @@
             }
         }
         .hero-image-desktop{
-            display:flex;
+            display:block;
             width: 50%;
             
             img{
